<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_send_sms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="masmix1.com.myapps.SendSmsActivity">

    <TextView
        android:id="@+id/send_sms_tytul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:text="@string/send_sms_tytul" />

    <TextView
        android:id="@+id/send_sms_opis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_below="@id/send_sms_tytul"
        android:layout_marginTop="10dp"
        android:text="@string/send_sms_opis" />

    <EditText
        android:id="@+id/sms_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/send_sms_opis"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@+id/sms_sendButton"
        android:hint="@string/sms_hint"
        android:maxLength="450" />

    <Button
        android:id="@id/sms_sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/sms_editText"
        android:layout_alignParentEnd="true"
        android:text="@string/sms_sendButton"
        android:onClick="onSendSms" />

</RelativeLayout>