<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="masmix1.com.myapps.MenuActivity">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/menu_title" />

    <Button
        android:id="@+id/piwnik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/piwnik_name"
        android:onClick="onClickStartPiwnik" />

    <Button
        android:id="@+id/send_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/piwnik"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/send_sms_name"
        android:onClick="onClickStartSendSms"
        />


</RelativeLayout>
