<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_piwnik"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="masmix1.com.myapps.PiwnikActivity">

    <TextView
        android:id="@+id/piwnik_tytul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:text="@string/piwnik_tytul" />

    <TextView
        android:id="@+id/piwnik_opis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/piwnik_tytul"
        android:text="@string/piwnik_opis"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/piwnik_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/piwnik_opis"
        android:entries="@array/lista_piw">
    </Spinner>

    <Button
        android:id="@+id/znajdz_piwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/piwnik_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/znajdz_piwa"
        android:onClick="onFindBeers" />

    <TextView
        android:id="@+id/wyswietl_piwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/znajdz_piwa"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/display_from_last_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="12sp" />

</RelativeLayout>
